--- a/apps/toolbox-client/src/app/pages/auth/register/register.component.html
+++ b/apps/toolbox-client/src/app/pages/auth/register/register.component.html
@@ -23,5 +23,7 @@
     />
 
     <p-button label="Create account" (onClick)="createAccount()" />
-    <p-button label="Already an account ? Login" [routerLink]="''"></p-button>
+    <p-button label="Login" (onClick)="login()"></p-button>
+    <p-button label="Get user" (onClick)="getUser()"></p-button>
+    <!-- <p-button label="Already an account ? Login" [routerLink]="''"></p-button> -->
 </div>
