--- a/apps/toolbox-client/src/app/pages/auth/login/login.component.html
+++ b/apps/toolbox-client/src/app/pages/auth/login/login.component.html
@@ -1,9 +1,10 @@
-<h3>Login</h3>
+<h3>{{submitionType() === 'login' ? 'Login' : 'Create an account'}}</h3>
 <form class="flex flex-column gap-2" [formGroup]="loginForm">
     <label for="email">Mail</label>
     <input 
         id="email"
         type="email"
+        autocomplete="email"
         formControlName="email"
         pInputText 
     />    
@@ -16,12 +17,16 @@
     <input 
         id="password"
         type="password"
+        autocomplete="current-password"
         formControlName="password"
         pInputText 
     />
 
-    <p-button label="Submit" (onClick)="login()" />
-    <p-button label="Create an account" [routerLink]="'register'" />
-    <p-button label="Get user" (onClick)="getUser()"></p-button>
-
+    <div class="flex gap-3">
+        <p-button label="Submit" (onClick)="submit()" />
+        <p-button label="Create an account" *ngIf="submitionType() === 'login'" (onClick)="submitionType.set('create-account'); errorMsg.set('')"/>
+        <p-button label="Login" *ngIf="submitionType() === 'create-account'" (onClick)="submitionType.set('login'); errorMsg.set('')"/>
+        <p-button label="Get user" (onClick)="getUser()"></p-button>
+    </div>
+    
 </form>
