--- a/apps/toolbox-client/src/app/core/shell/layout/header/header.component.html
+++ b/apps/toolbox-client/src/app/core/shell/layout/header/header.component.html
@@ -1,12 +1,18 @@
+
 <p-menubar [model]="items" >
     <ng-template pTemplate="end">
         <div class="flex-row align-items-center">
-           <span>Mock data from google API</span> 
-           <div>
-               <p-inputSwitch 
-               [ngModel]="mockResponses$ | async" 
-               (onChange)="mockResponses$.next($event.checked)" />
-           </div>
+            @if (currentUser()) {
+                Logged as {{currentUser()?.email}}
+            }
+            <!-- <div>
+                <span>Mock data from google API</span> 
+                <div>
+                    <p-inputSwitch 
+                    [ngModel]="mockResponses$ | async" 
+                    (onChange)="mockResponses$.next($event.checked)" />
+                </div>
+            </div> -->
         </div>
     </ng-template>
 </p-menubar>
