--- a/apps/toolbox-client/src/app/pages/login/login.component.html
+++ b/apps/toolbox-client/src/app/pages/login/login.component.html
@@ -22,11 +22,9 @@
         pInputText 
     />
 
-    <div class="flex gap-3">
+    <div class="flex gap-3 align-items-center">
         <p-button label="Login" (onClick)="login()" />
-        <!-- <p-button label="Create an account" *ngIf="submitionType() === 'login'" (onClick)="submitionType.set('create-account'); errorMsg.set('')"/>
-        <p-button label="Login" *ngIf="submitionType() === 'create-account'" (onClick)="submitionType.set('login'); errorMsg.set('')"/>
-        <p-button label="Get user" (onClick)="getUser()"></p-button> -->
+        <p-button label="Create an account" [size]="'small'" [routerLink]="'/signup'" />
     </div>
     
 </form>
