setup ngrx signals

--- a/apps/toolbox-client/src/app/pages/books-crud/books-crud.component.html
+++ b/apps/toolbox-client/src/app/pages/books-crud/books-crud.component.html
@@ -4,4 +4,4 @@
 
 <app-library/>
 
-<p-button (onClick)="testBooks()">Test books</p-button>
+<!-- <p-button (onClick)="testBooks()">Test books</p-button> -->
