--- a/apps/toolbox-client/src/app/pages/signup/signup.component.html
+++ b/apps/toolbox-client/src/app/pages/signup/signup.component.html
@@ -1,30 +1,33 @@
-<h3>{{submitionType() === 'login' ? 'Login' : 'Create an account'}}</h3>
-<form class="flex flex-column gap-2" [formGroup]="loginForm">
-    <label for="email">Mail</label>
-    <input 
-        id="email"
-        type="email"
-        autocomplete="email"
-        formControlName="email"
-        pInputText 
-    />    
-    
-    <small >
-        {{errorMsg()}}
-    </small>
+<div class="flex justify-content-center align-items-center flex-column m-5">
 
-    <label for="password">Password</label>
-    <input 
-        id="password"
-        type="password"
-        autocomplete="current-password"
-        formControlName="password"
-        pInputText 
-    />
-
-    <div class="flex gap-3 align-items-center">
-        <p-button label="Create an account" (onClick)="createAccount()" />
-        <p-button label="Back to login"  [size]="'small'" [routerLink]="'/login'" />
-    </div>
+    <h3>{{submitionType() === 'login' ? 'Login' : 'Create an account'}}</h3>
+    <form class="flex flex-column gap-2 max-w-30rem" [formGroup]="loginForm">
+        <label for="email">Mail</label>
+        <input 
+            id="email"
+            type="email"
+            autocomplete="email"
+            formControlName="email"
+            pInputText 
+        />    
+        
+        <small >
+            {{errorMsg()}}
+        </small>
     
-</form>
+        <label for="password">Password</label>
+        <input 
+            id="password"
+            type="password"
+            autocomplete="current-password"
+            formControlName="password"
+            pInputText 
+        />
+    
+        <div class="flex gap-3 align-items-center">
+            <p-button label="Create an account" (onClick)="createAccount()" />
+            <p-button label="Back to login"  [size]="'small'" [routerLink]="'/login'" />
+        </div>
+        
+    </form>
+</div>
