--- a/apps/toolbox-client/src/app/pages/chat-page/chat-page.component.html
+++ b/apps/toolbox-client/src/app/pages/chat-page/chat-page.component.html
@@ -1,6 +1,11 @@
 <app-header/>
 
-<div class="flex justify-content-center align-items-center flex-row m-5 gap-5">
-    <app-chat class="w-30rem"/>
-    <app-chat class="w-30rem"/>
+<div class="flex justify-content-center align-items-center flex-row m-5 ">
+
+    <div class="flex flex-column gap-3 align-items-center min-w-full	">
+        @for (room of chatRoomStore.chatRoomsEntities(); track $index; let i = $index) {
+            <app-chat-room class="min-w-full	" [chatRoom]="room"/>
+        }
+        <p-button (onClick)="createChatRoom()">Create a chat room</p-button>
+    </div>
 </div>
