--- a/apps/toolbox-client/src/app/pages/chat-page/chat-room/chat-room.component.html
+++ b/apps/toolbox-client/src/app/pages/chat-page/chat-room/chat-room.component.html
@@ -1,18 +1,29 @@
 <p-card class="flex flex-column	min-w-full">
     <p-header>
         <p-button 
-        icon="pi pi-trash " 
-        [rounded]="true" 
-        [text]="true"
-        size="small" 
-        (onClick)="removeChatRoom()"
+            icon="pi pi-trash " 
+            [rounded]="true" 
+            [text]="true"
+            size="small" 
+            (onClick)="removeChatRoom()"
         />
     </p-header>
     <div class="flex flex-wrap gap-4 m-3 min-h-full">
         <app-chat *ngFor="let memberId of chatRoom().members" [memberId]="memberId" [chatRoom]="chatRoom()"/>
     
         <div class=" gap-3 align-items-center">
-            <p-button (onClick)="addMemberToChat()">Add a member to the conversation</p-button>
+            @if (availableUsersToAdd().length) {
+                <p-select 
+                    [options]="availableUsersToAdd()"
+                    [formControl]="addMemberControl"
+                    [loading]="chatRoomsStore.isLoading()"
+                    optionLabel="email" 
+                    placeholder="Add a participant to the conversation" 
+                    class="w-full md:w-56" 
+                />
+            } @else {
+                <span>No user to add. You can logout and create another user to test the chat feature.</span>
+            }
         </div>
     </div>
 </p-card>
