population on repository

--- a/apps/toolbox-client/src/app/pages/chat-page/chat-room/chat-room.component.html
+++ b/apps/toolbox-client/src/app/pages/chat-page/chat-room/chat-room.component.html
@@ -9,7 +9,11 @@
         />
     </p-header>
     <div class="flex flex-wrap gap-4 m-3 min-h-full">
-        <app-chat *ngFor="let memberId of chatRoom().members" [memberId]="memberId" [chatRoom]="chatRoom()"/>
+        <app-chat *ngFor="let member of chatRoom().members" 
+        [member]="member" 
+        (sendMessage)="sendMessage($event, member)"
+        (memberLeavesChat)="memberLeavesChat(member)"
+        />
     
         <div class=" gap-3 align-items-center">
             @if (availableUsersToAdd().length) {
