--- a/apps/toolbox-client/src/app/pages/chat-page/chat-room/chat/chat-message/chat-message.component.scss
+++ b/apps/toolbox-client/src/app/pages/chat-page/chat-room/chat/chat-message/chat-message.component.scss
@@ -3,11 +3,7 @@
   .p-card-content {
     min-height: 8rem;
     border-radius: 1rem 1rem 0 0;
-    // background-color: var(--p-inputtext-color);
-
-    .typing-message {
-      font-size: x-small;
-    }
+    background-color: var(--p-inputtext-color);
   }
 
   .p-card-footer {
