--- a/apps/toolbox-client/src/app/pages/chat-page/chat-room/chat/chat.component.html
+++ b/apps/toolbox-client/src/app/pages/chat-page/chat-room/chat/chat.component.html
@@ -1,5 +1,11 @@
 <p-card>
-    <p-footer class="flex-row align-content-center gap-3">
+    <!-- <p>
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Inventore sed consequuntur error repudiandae numquam deserunt
+        quisquam repellat libero asperiores earum nam nobis, culpa ratione quam perferendis esse, cupiditate neque quas!
+
+        <span class="typing-message">is typing</span>
+    </p> -->
+    <ng-template pTemplate="footer" class="flex-row align-content-center gap-3">
         <input 
             pSize="small" 
             class="mr-2"
@@ -17,9 +23,8 @@
             (click)="sendMessage.emit(messageContent.value)"
         />
         <!-- messageContent.value: {{messageContent.value}} -->
-    </p-footer>
+    </ng-template>
 
-    <!-- <p-button (onClick)="testChat()">test chat</p-button> -->
 </p-card>
 <div class="flex flex-row justify-content-between gap-6 mt-2 user-infos">
     <span class="user mt-2">connected as {{member().email}}</span>
