fix chat messages + set documents variables

--- a/apps/toolbox-client/src/app/pages/chat-page/chat-room/chat-room.component.html
+++ b/apps/toolbox-client/src/app/pages/chat-page/chat-room/chat-room.component.html
@@ -32,4 +32,6 @@
             }
         </div>
     </div>
+
+    <p-button (onClick)="getMessagesForChatroom()">getMessagesForChatroom</p-button>
 </p-card>
