set messages pagination

--- a/apps/toolbox-client/src/app/pages/chat-page/chat-room/chat-room.component.html
+++ b/apps/toolbox-client/src/app/pages/chat-page/chat-room/chat-room.component.html
@@ -19,6 +19,7 @@
                 (sendMessageOutput)="sendMessageEvent($event, member)"
                 (memberLeavesChatOutput)="memberLeavesChatEvent(member)"
                 (typingUserOutput)="typingUserEvent($event)"
+                (loadPreviousMessagesOuput)="loadPreviousMessages()"
             />
         </div>
     
