--- a/apps/toolbox-client/src/app/pages/chat-page/chat-room/chat/chat.component.html
+++ b/apps/toolbox-client/src/app/pages/chat-page/chat-room/chat/chat.component.html
@@ -18,64 +18,31 @@
 
 </div>
 
+<!-- <p-button (onClick)="loadOlderMessages()">load older messages</p-button> -->
+<!-- <p-button (onClick)="scrollTo9()">scroll to 9</p-button> -->
+<p-button (onClick)="setFirstMessageAsSeen()">set first message as seen</p-button>
+
 <div class="chat-messages flex flex-column pt-3">
 
-    <p-button (onClick)="loadOlderMessages()">load older messages</p-button>
     <cdk-virtual-scroll-viewport #messagesViewport
         appendOnly
-        [itemSize]="50"  
-        [minBufferPx]="300"  
-        [maxBufferPx]="500"  
+        [minBufferPx]="500" 
+        [maxBufferPx]="1000" 
+        [itemSize]="40"
         class="messages-viewport p-1 gap-1" 
-        (scrolledIndexChange)="messagesViewportScrolling($event)"
+        (scrolledIndexChange)="scrollingIndexChanged($event)"
     >
-        <!-- <div *cdkVirtualFor="let message of (filteredMessages$ | async)" class="example-item"> -->
-            <app-chat-message 
-                *cdkVirtualFor="let message of filteredMessages$"
-                [appCdkDynamicHeightDir]="message"
-                [isSenderCurrentUserInput]="message.sender._id === memberInput()._id"
-                [messageInput]="message"
-                [displayUserMailInput]="message.displayEmail"
-            />
-        <!-- </div> -->
+        <div class="flex align-items-center justify-content-center" *ngIf="loadingMessages()">
+            <p-progress-spinner  ariaLabel="loading" />
+        </div>
+
+        <app-chat-message #messageElement
+            *cdkVirtualFor="let message of filteredMessages$"
+            [isSenderCurrentUserInput]="message.sender._id === memberInput()._id"
+            [messageInput]="message"
+            [displayUserMailInput]="message.displayEmail"
+        />
     </cdk-virtual-scroll-viewport>
-
-    <!-- <p-virtualscroller
-        #sc
-        [items]="(filteredMessages$ | async)"
-        [options]="scrollerOptions"
-        [lazy]="false"
-        [scrollHeight]="'18rem'"
-        styleClass="border border-surface"
-        >
-            <ng-template pTemplate="item" let-item let-options="options">
-                <app-chat-message 
-                [isSenderCurrentUserInput]="item.sender._id === memberInput()._id"
-                [messageInput]="item"
-                [displayUserMailInput]="item.displayEmail"
-            />
-            </ng-template>
-    </p-virtualscroller> -->
-
-    <!-- <p-button label="Reset" (click)="reset()" /> -->
-    <!-- <p-virtualscroller
-        #sc
-        [items]="items"
-        [itemSize]="18"
-        [lazy]="false"
-        scrollHeight="200px"
-        styleClass="border border-surface"
-        class="full-height-scroller"
-        [style]="{'width': '200px', 'height': '200px'}">
-            <ng-template pTemplate="item" let-item let-options="options">
-                <div
-                class="flex items-center"
-                [ngClass]="{ 'bg-surface-100 dark:bg-surface-700': options.odd }"
-                style="height: 18px;">
-                    {{ item }}
-                </div>
-            </ng-template>
-    </p-virtualscroller> -->
 
     <div  class="typing-message flex align-items-end pl-2 pb-1">
         <span *ngIf="(typingUsersWithoutCurrentMember().length === 1)">{{typingUsersWithoutCurrentMember()[0]}} is typing...</span>
