--- a/apps/toolbox-client/src/app/pages/chat-page/chat-room/chat/chat.component.scss
+++ b/apps/toolbox-client/src/app/pages/chat-page/chat-room/chat/chat.component.scss
@@ -59,11 +59,18 @@
     border-radius: 1rem 1rem 0 0;
     height: var(--chat-messages-height);
 
+    p-progress-spinner {
+      .p-progressspinner {
+        width: 3rem;
+        height: 2rem;
+      }
+    }
+
     .messages-viewport {
       height: 100%;
 
       app-chat-message {
-        min-height: 50;
+        min-height: 40px;
       }
 
       .cdk-virtual-scroll-spacer {
