rename chat components

--- a/apps/toolbox-client/src/app/pages/chat-page/chat-room/chat.component.html
+++ b/apps/toolbox-client/src/app/pages/chat-page/chat-room/chat.component.html
@@ -1,4 +1,4 @@
-<p-card class="flex flex-column	min-w-full">
+<!-- <p-card class="flex flex-column	min-w-full">
     <div class="chat-room-header">
         <p-button 
             icon="pi pi-trash " 
@@ -34,4 +34,8 @@
             }
         </div>
     </div>
-</p-card>
+</p-card> -->
+
+<div class="chat-fixed">
+    Chat
+</div>
