chat messages reactivity

--- a/apps/toolbox-client/src/app/pages/chat-page/chat-room/chat/chat-room.component.scss
+++ b/apps/toolbox-client/src/app/pages/chat-page/chat-room/chat/chat-room.component.scss
@@ -46,7 +46,13 @@
     height: 3rem;
 
     .user {
-      font-size: x-small;
+      .name {
+        font-size: smaller;
+      }
+      .typing{
+        font-size: x-small;
+        min-height: 1rem;
+      }
     }
 
     .p-button {
