--- a/apps/toolbox-client/src/app/pages/chat-page/chat-room/chat/chat-room.component.html
+++ b/apps/toolbox-client/src/app/pages/chat-page/chat-room/chat/chat-room.component.html
@@ -2,7 +2,12 @@
 
 <div class="chat-header pl-3 pr-1 flex justify-content-between align-items-center		">
 
-    <span class="user">{{chatMembersMails()}}</span>
+    <div class="user flex flex-column">
+        <div class="name">{{chatMembersMails()}}</div>
+        <div class="pl-2 typing flex align-items-end" >
+            <span *ngIf="(typingUsersWithoutCurrentMember().length === 1)">typing...</span>
+        </div> 
+    </div>
     <div>
         <p-button 
             *ngIf="currentUser()?.email !== currentUser()?.email" 
@@ -41,7 +46,7 @@
 <!-- <p-button (onClick)="scrollTo9()">scroll to 9</p-button> -->
 <!-- <p-button (onClick)="setFirstMessageAsSeen()">set first message as seen</p-button> -->
 
-<div class="chat-messages flex flex-column pt-3">
+<div class="chat-messages flex flex-column">
 
     <cdk-virtual-scroll-viewport #messagesViewport
         appendOnly
@@ -63,10 +68,10 @@
         />
     </cdk-virtual-scroll-viewport>
 
-    <div  class="typing-message flex align-items-end pl-2 pb-1">
+    <!-- <div  class="typing-message flex align-items-end pl-2 pb-1">
         <span *ngIf="(typingUsersWithoutCurrentMember().length === 1)">{{typingUsersWithoutCurrentMember()[0]}} is typing...</span>
         <span *ngIf="(typingUsersWithoutCurrentMember().length > 1)">{{typingUsersWithoutCurrentMember()[0]}} and {{typingUsersWithoutCurrentMember().length - 1}} more are typing... </span>
-    </div>
+    </div> -->
         
 </div>
 
