--- a/apps/toolbox-client/src/app/pages/chat-page/chat-room/chat/chat-room.component.html
+++ b/apps/toolbox-client/src/app/pages/chat-page/chat-room/chat/chat-room.component.html
@@ -1,26 +1,34 @@
 
 
-<div class="chat-header pl-3 pr-1 flex justify-content-between align-items-center		">
+<div 
+    class="chat-header pl-3 pr-1 flex justify-content-between align-items-center"
+>
+    <div class="unviewed-messages-number-badge" 
+        *ngIf="unviewedMessages() > 0" 
+        pBadge  
+        [value]="unviewedMessages()"
+        >
+    </div>
 
-    <div class="user flex flex-column">
-        <div class="name">{{chatMembersMails()}}</div>
-        <div class="pl-2 typing flex align-items-end" >
-            <span *ngIf="(typingUsersWithoutCurrentMember().length === 1)">typing...</span>
-        </div> 
-    </div>
-    <div>
+    <div class="user flex flex-row">
         <p-button 
-            *ngIf="currentUser()?.email !== currentUser()?.email" 
-            icon="pi pi-sign-out" 
-            aria-label="Leave" 
-            [outlined]="false" 
-            [rounded]="false" 
-            [text]="true"
-            (click)="memberLeavesChatOutput.emit(this.currentUser()!)" 
-            size="small" 
-        />
+        size="small"
+        class="name"
+        [severity]="'secondary'"
+        (onClick)="toggleChatroomFold()"
+        >
+            {{chatMembersMails}}
+        </p-button>
+
+        <div class="typing-indicator flex flex-row align-items-center justify-content-center">
+            <ng-container  *ngIf="(typingUsers.length === 1)">
+                <span></span>
+                <span></span>
+                <span></span>
+            </ng-container>
+        </div>
     </div>
-    <div class="flex flex-row gap-1">
+    <div class="flex flex-row gap-1 action-buttons">
         <p-button 
             [text]="true"
             [outlined]="true"  
@@ -34,18 +42,8 @@
             size="small"  
             (onClick)="desactivateChatRoom()" 
         />
-
-        <!-- <p-button icon="pi pi-minus" [rounded]="true" [outlined]="true"  size="small" />
-        <p-button icon="pi pi-times"[rounded]="true" [outlined]="true"  size="small"  (onClick)="desactivateChatRoom()" /> -->
     </div> 
-     <!-- <p-button icon="pi pi-trash" [rounded]="true" (onClick)="removeChatRoom()" /> -->
-
 </div>
-
-<!-- <p-button (onClick)="loadOlderMessages()">load older messages</p-button> -->
-<!-- <p-button (onClick)="scrollTo9()">scroll to 9</p-button> -->
-<!-- <p-button (onClick)="setFirstMessageAsSeen()">set first message as seen</p-button> -->
-
 <div class="chat-messages flex flex-column">
 
     <cdk-virtual-scroll-viewport #messagesViewport
@@ -54,36 +52,31 @@
         [maxBufferPx]="1000" 
         [itemSize]="40"
         class="messages-viewport p-1 gap-1" 
-        (scrolledIndexChange)="scrollingIndexChanged($event)"
-    >
-        <div class="flex align-items-center justify-content-center" *ngIf="loadingMessages()">
+        >
+        <div class="flex align-items-center justify-content-center" *ngIf="loadingMessages">
             <p-progress-spinner  ariaLabel="loading" />
         </div>
 
         <app-chat-message #messageElement
-            *cdkVirtualFor="let message of filteredMessages$"
+            appVisibilityObserver
+            *cdkVirtualFor="let message of filteredMessages"
+            [visibilityObsoptions]="{ threshold: 1.0 }"
             [isSenderCurrentUserInput]="message.sender._id === currentUser()?._id"
             [messageInput]="message"
             [displayUserMailInput]="message.displayEmail"
+            (visibilityChange)="messageVisibilityChangedEvent(message, $event)"
         />
     </cdk-virtual-scroll-viewport>
-
-    <!-- <div  class="typing-message flex align-items-end pl-2 pb-1">
-        <span *ngIf="(typingUsersWithoutCurrentMember().length === 1)">{{typingUsersWithoutCurrentMember()[0]}} is typing...</span>
-        <span *ngIf="(typingUsersWithoutCurrentMember().length > 1)">{{typingUsersWithoutCurrentMember()[0]}} and {{typingUsersWithoutCurrentMember().length - 1}} more are typing... </span>
-    </div> -->
-        
 </div>
 
 
-<div class="new-messages-tooltip flex align-items-center justify-content-center" *ngIf="unreadMessages > 0">
-     <p-button icon="pi pi-arrow-down" size="small" label="New messages" (onClick)="scrollToLastMessage('smooth')" [badge]="unreadMessages.toString()" />
+<div class="new-messages-tooltip flex align-items-center justify-content-center" *ngIf="unviewedMessages() > 0">
+     <p-button icon="pi pi-arrow-down" size="small" label="New messages" (onClick)="scrollToLastMessage('smooth')" [badge]="unviewedMessages().toString()" />
 </div>
-
 
 <div class="chat-input flex flex-row align-items-center">
-
     <input 
+        #messageInput
         pSize="small" 
         pInputText             
         [formControl]="messageContent"
