--- a/apps/toolbox-client/src/app/pages/chat-page/chat-room/chat/chat-room.component.scss
+++ b/apps/toolbox-client/src/app/pages/chat-page/chat-room/chat/chat-room.component.scss
@@ -45,17 +45,62 @@
     font-size: 18px;
     height: 3rem;
 
+    .unviewed-messages-number-badge {
+      position: absolute;
+      top: 0;
+      right: 0;
+    }
+
     .user {
       .name {
         font-size: smaller;
       }
-      .typing{
-        font-size: x-small;
-        min-height: 1rem;
+
+      /* Container for the typing dots */
+      .typing-indicator {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        gap: 4px;
+        width: 32px;
+      }
+
+      /* The dots */
+      .typing-indicator span {
+        width: 8px;
+        height: 8px;
+        background-color: #f0f0f0; /* Dot color */
+        border-radius: 50%;
+        animation: typing-bounce 1.5s infinite ease-in-out;
+      }
+
+      /* Animations for each dot */
+      .typing-indicator span:nth-child(1) {
+        animation-delay: 0s;
+      }
+
+      .typing-indicator span:nth-child(2) {
+        animation-delay: 0.2s;
+      }
+
+      .typing-indicator span:nth-child(3) {
+        animation-delay: 0.4s;
+      } 
+
+      /* Keyframes for bouncing effect */
+      @keyframes typing-bounce {
+        0%, 80%, 100% {
+          transform: scale(0);
+          opacity: 0.3;
+        }
+        40% {
+          transform: scale(1);
+          opacity: 1;
+        }
       }
     }
 
-    .p-button {
+    .action-buttons .p-button {
       height: 2rem;
       width: 2rem;
     }
@@ -64,7 +109,6 @@
   /* Chat Messages Styles */
   .chat-messages {
     background-color: #f9f9f9;
-    // border-radius: 1rem 1rem 0 0;
     height: var(--chat-messages-height);
 
     p-progress-spinner {
